Basic working front-end with API capabilities

--- a/src/app/components/coin-card/coin-card.component.css
+++ b/src/app/components/coin-card/coin-card.component.css
@@ -1,7 +1,7 @@
 .coin-card {
     min-height: 300px;
     width: 200px;
-    background: tomato;
+    background: lemonchiffon;
     padding: 1rem;
 }
 
