--- a/src/app/components/coin-card/coin-card.component.html
+++ b/src/app/components/coin-card/coin-card.component.html
@@ -1,4 +1,5 @@
 <div class="coin-card">
+    <button (click)="removeCard(coin.currency)" class="remove-btn">X</button>
     <h2>
         {{ coin.name }}
         (<small><em>{{ coin.currency }}</em></small>)
